--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <h1>Heart Disease </h1>
-    <h2>COMP9321 group project</h2>
+    <h2>COMP9321 project</h2>
     
     <div class="visulization" style="text-align: center;">
         <a href="/main" target="_blank"  id="main" >Visulization page</a>&nbsp;&nbsp;
