--- a/templates/main.html
+++ b/templates/main.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <h1>visulization</h1>
-    <h2>COMP9321 group project</h2>
+    <h2>COMP9321 project</h2>
     
     <!-- <img src="{{ user_image1 }}" alt="User Image">
     <img src="{{ user_image2 }}" alt="User Image">
